Fixed until Functionality 4

--- a/HW5_main.ipynb
+++ b/HW5_main.ipynb
@@ -202,7 +202,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "4894081it [06:03, 13463.48it/s]\n"
+            "4894081it [06:05, 13392.28it/s]\n"
           ]
         }
       ],
@@ -805,80 +805,41 @@
     {
       "cell_type": "code",
       "execution_count": 17,
-      "id": "1574a3f6",
-      "metadata": {
-        "id": "1574a3f6"
-      },
+      "id": "d93bd799",
+      "metadata": {},
       "outputs": [],
-      "source": [
-        "collaboration_dict = {\n",
-        "    'name1' : [],\n",
-        "    'name2' : []\n",
-        "}"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 18,
-      "id": "9383d665",
-      "metadata": {
-        "id": "9383d665",
-        "outputId": "691437fd-5210-4732-ccb1-417a670844e6"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "[('David W. Hosmer', 'Stanley Lemeshow'),\n",
-              " ('Chih-Chung Chang', 'Chih-Jen Lin'),\n",
-              " ('Corinna Cortes', 'Vladimir Vapnik'),\n",
-              " ('Heng Li', 'Richard Durbin'),\n",
-              " ('K. Deb', 'A. Pratap')]"
-            ]
-          },
-          "execution_count": 18,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
       "source": [
         "#Take a subset of the 10,000 papers dataset, and transform it in a readable dataset...\n",
         "##... with only two column, within one value\n",
-        "collaborationG_edges_df_2 = df_10th_papers.reset_index()[['authors']]\n",
-        "nestedlist_auth_collaboration = collaborationG_edges_df_2['authors'].tolist()\n",
+        "collaborationG_edges_df_2_1 = df_10th_papers.reset_index()[['authors', 'title']]\n",
+        "nestedlist_auth_collaboration_1 = collaborationG_edges_df_2_1[['authors', 'title']].to_dict(orient='records')\n",
         "\n",
-        "#Create all possible matches of collaboration for each book\n",
-        "collaborationG_edges = []\n",
-        "for authors_list in nestedlist_auth_collaboration:\n",
-        "    for i in range(len(authors_list)):\n",
-        "        for j in range(i + 1, len(authors_list)):\n",
-        "            collaborationG_edges.append((authors_list[i], authors_list[j]))\n",
+        "# Create all possible matches of collaboration for each book and put the book title\n",
+        "collaborationG_edges_1 = []\n",
+        "for record in nestedlist_auth_collaboration_1:\n",
+        "    authors_list_1 = record['authors']\n",
+        "    book_title_1 = record['title']\n",
+        "    for i in range(len(authors_list_1)):\n",
+        "        for j in range(i + 1, len(authors_list_1)):\n",
+        "            collaborationG_edges_1.append((authors_list_1[i], authors_list_1[j], book_title_1))\n",
         "\n",
-        "collaborationG_edges[:5]\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 19,
-      "id": "a4eeca79",
-      "metadata": {
-        "id": "a4eeca79"
-      },
-      "outputs": [],
-      "source": [
-        "#Create a counter for couple\n",
-        "collaborationG_edges_counter = Counter(collaborationG_edges)\n",
+        "# Create a counter for couples\n",
+        "collaborationG_edges_counter_1 = Counter(collaborationG_edges_1)\n",
         "\n",
-        "#Create a dictionary for track couple weight\n",
-        "collaborationG_edges_weights = {}\n",
+        "# Create a dictionary to track couple weight and book titles\n",
+        "collaborationG_edges_info = {}\n",
         "\n",
-        "#Iteract edges and count from dict\n",
-        "for edge, count in collaborationG_edges_counter.items():\n",
-        "    collaborationG_edges_weights[edge] = count\n",
+        "# Iterate through edges and count from dict\n",
+        "for edge, count in collaborationG_edges_counter_1.items():\n",
+        "    edge_info = {\n",
+        "        'weight': count,\n",
+        "        'titles': [edge[2]] * count\n",
+        "    }\n",
+        "    collaborationG_edges_info[(edge[0], edge[1])] = edge_info\n",
         "\n",
-        "    #Add weight also for inverted edge\n",
+        "    # Add info also for inverted edge\n",
         "    inverted_edge = (edge[1], edge[0])\n",
-        "    collaborationG_edges_weights[inverted_edge] = count"
+        "    collaborationG_edges_info[inverted_edge] = edge_info\n"
       ]
     },
     {
@@ -903,7 +864,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 18,
       "id": "17676411",
       "metadata": {
         "id": "17676411"
@@ -921,7 +882,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 19,
       "id": "2ffa14ed",
       "metadata": {},
       "outputs": [],
@@ -943,27 +904,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
-      "id": "61fc7d97",
-      "metadata": {
-        "id": "61fc7d97"
-      },
+      "execution_count": 20,
+      "id": "d055cc81",
+      "metadata": {},
       "outputs": [],
       "source": [
         "#Create a weighted and undirected graph\n",
-        "collaboration_graph = nx.Graph()\n",
+        "collaboration_graph_1 = nx.Graph()\n",
         "\n",
         "#Add nodes to the graph\n",
-        "collaboration_graph.add_nodes_from(collaborationG_nodes)\n",
+        "collaboration_graph_1.add_nodes_from(collaborationG_nodes)\n",
         "\n",
-        "#Add edges to the graph\n",
-        "for edge, weight in collaborationG_edges_weights.items():\n",
-        "    collaboration_graph.add_edge(edge[0], edge[1], weight=weight)"
+        "# Add edges to the graph\n",
+        "for edge, info in collaborationG_edges_info.items():\n",
+        "    collaboration_graph_1.add_edge(edge[0], edge[1], weight=info['weight'], titles=info['titles'])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 21,
       "id": "0338966d",
       "metadata": {},
       "outputs": [],
@@ -995,27 +954,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 22,
       "id": "6c83db1b",
       "metadata": {
         "id": "6c83db1b"
       },
       "outputs": [],
       "source": [
-        "#For this section (2.1) we work with the subgraph (10,000) of the entire graph\n",
+        "#Create the shortlist for Citation Subgraph from N (the top 100 books with the highest degree)\n",
+        "N = 100\n",
+        "degrees_for_topBooks = dict(citation_graph.degree())\n",
+        "topN_books_2 = sorted(degrees_for_topBooks.items(), key=lambda x:x[1], reverse=True)[:N]\n",
+        "topN_books = [i[0] for i in topN_books_2]\n",
+        "#Subgraph Citation\n",
+        "sub_citation_graph = citation_graph.subgraph(topN_books)\n",
         "\n",
-        "#Shortlist for Citation Subgraph\n",
-        "books_red = df_10th_papers['id'].tolist()\n",
-        "#Subgraph\n",
-        "sub_citation_graph = citation_graph.subgraph(books_red)\n",
         "\n",
-        "#Create the shortlist for Collaboration Subgraph\n",
-        "auth_red = []\n",
-        "for list_2 in nestedlist_auth_collaboration:\n",
-        "    for auth in list_2:\n",
-        "        auth_red.append(auth)\n",
-        "#Subgraph\n",
-        "sub_collaboration_graph = collaboration_graph.subgraph(auth_red)"
+        "#Create the shortlist for Collaboration Subgraph from N (the top 100 authors with the highest degree)\n",
+        "N = 100\n",
+        "degrees_for_topN = dict(collaboration_graph_1.degree())\n",
+        "topN_auth_2 = sorted(degrees_for_topN.items(), key=lambda x:x[1], reverse=True)[:N]\n",
+        "topN_auth = [i[0] for i in topN_auth_2]\n",
+        "#Subgraph Collaboration\n",
+        "sub_collaboration_graph = collaboration_graph_1.subgraph(topN_auth)"
       ]
     },
     {
@@ -1043,7 +1004,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 23,
       "id": "a4a38c24",
       "metadata": {
         "id": "a4a38c24"
@@ -1059,7 +1020,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 24,
       "id": "1f9e29ce",
       "metadata": {
         "id": "1f9e29ce"
@@ -1098,7 +1059,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 25,
       "id": "3a0f7430",
       "metadata": {
         "id": "3a0f7430"
@@ -1108,11 +1069,9 @@
         "sys.path.append(\"funct\")\n",
         "from functionality2 import functionality_2\n",
         "\n",
-        "#node_selected_collaboration = 2155511848\n",
-        "\n",
         "name_graph = 'Sub Citation Graph'\n",
-        "#node_selected = int(input(\"Insert the Node that the function calculated: \"))\n",
-        "betw, pagerank, closeness, degree = functionality_2(sub_citation_graph, node_selected=2155511848, name_graph=name_graph)"
+        "#If we put node_selected = 0, the algorithm take one random node\n",
+        "betw, pagerank, closeness, degree = functionality_2(sub_citation_graph, node_selected=0, name_graph=name_graph)"
       ]
     },
     {
@@ -1146,7 +1105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 26,
       "id": "533d348a",
       "metadata": {
         "id": "533d348a"
@@ -1156,11 +1115,9 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "The first node is: Benoit Marchand\n",
-            "The last node is: Eri Saijyo\n",
-            "The authors sequence is: ['Hideki Tatsukawa', 'Timo Lassmann', 'Andrew P. Gibson', 'Boris R. Jankovic', 'Naoko Suzuki', 'Christian Schmidl', 'Mariko Okada-Hatakeyama', 'Ilya E. Vorontsov']\n",
-            "9\n",
-            "['Benoit Marchand', 'Hideki Tatsukawa', 'Timo Lassmann', 'Andrew P. Gibson', 'Boris R. Jankovic', 'Naoko Suzuki', 'Christian Schmidl', 'Mariko Okada-Hatakeyama', 'Ilya E. Vorontsov', 'Eri Saijyo']\n"
+            "The first node is: Jun Kawai\n",
+            "The last node is: Anthony Mathelier\n",
+            "The authors sequence is: ['Yoko Yamaguchi', 'John A C Archer', 'Masayuki Yamamoto', 'Giuseppe Jurman', 'Hideya Kawaji', 'Carrie A. Davis', 'Gabriel M. Altschule', 'Claudio Schneider']\n"
           ]
         }
       ],
@@ -1171,10 +1128,7 @@
         "#We selected N = 100\n",
         "N_sel = 100\n",
         "\n",
-        "total_shortest_walk, path = functionality_3(sub_collaboration_graph, sequence_authors=0, node_first=0, node_last=0, N=N_sel)\n",
-        "\n",
-        "print(total_shortest_walk)\n",
-        "print(path)"
+        "total_shortest_walk, paper_cross = functionality_3(collaboration_graph_1, sequence_authors=0, node_first=0, node_last=0, N=N_sel)"
       ]
     },
     {
@@ -1279,7 +1233,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 27,
       "id": "77cafd97",
       "metadata": {
         "id": "77cafd97"
