Latest version of MAIN file

--- a/HW5_main.ipynb
+++ b/HW5_main.ipynb
@@ -202,7 +202,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "4894081it [06:05, 13392.28it/s]\n"
+            "4894081it [05:57, 13695.00it/s]\n"
           ]
         }
       ],
@@ -939,7 +939,7 @@
         "id": "f99b8cd7"
       },
       "source": [
-        "# 2. Controlling system\n"
+        "## 2. Controlling system\n"
       ]
     },
     {
@@ -1115,9 +1115,9 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "The first node is: Jun Kawai\n",
-            "The last node is: Anthony Mathelier\n",
-            "The authors sequence is: ['Yoko Yamaguchi', 'John A C Archer', 'Masayuki Yamamoto', 'Giuseppe Jurman', 'Hideya Kawaji', 'Carrie A. Davis', 'Gabriel M. Altschule', 'Claudio Schneider']\n"
+            "The first node is: Peter Arner\n",
+            "The last node is: Sarah Rennie\n",
+            "The authors sequence is: ['Stefano Gustincich', 'Vanja Haberle', 'Harukazu Suzuki', 'Cesare Furlanello', 'Tetsuro Toyoda', 'Jessica Severin', 'Jessica C. Mar', 'Christophe Simon']\n"
           ]
         }
       ],
@@ -1233,7 +1233,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 26,
       "id": "77cafd97",
       "metadata": {
         "id": "77cafd97"
@@ -1247,7 +1247,7 @@
         "N_sel = 100\n",
         "\n",
         "#If we put 0 in 'start' and 'target' we selected two random authors\n",
-        "removed_edges = functionality_4(sub_collaboration_graph, start=0, target=0, N=N_sel)"
+        "removed_edges = functionality_4(collaboration_graph_1, start=0, target=0, N=N_sel)"
       ]
     },
     {
@@ -1275,76 +1275,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
-      "id": "d257005a",
-      "metadata": {
-        "id": "d257005a"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "'\\n#number of nodes we want to analyze\\nn=2\\n\\n#subsample = random.sample(list(sub_citation_graph.nodes), n)\\nprint(\"Papers we want:\", subsample[0], subsample[1])\\n\\n\\ndef functionality_5(graph, p1, p2):\\n    #We need an undirected graph\\n    graph_copy = graph.to_undirected()\\n\\n    if nx.number_connected_components(graph_copy) > 1:\\n        print(\"The graph is not full connected!\")\\n        return 0, [], False\\n    \\n    #Calculate the initial number of edges\\n    num_edges_start = graph_copy.number_of_edges()\\n\\n    #Calculate betweenness centrality for each edge\\n    edge_betweenness = nx.edge_betweenness_centrality(graph_copy)\\n\\n    # Sort edges by betweenness centrality in descending order\\n    sorted_edges = sorted(edge_betweenness.items(), key=lambda x: x[1], reverse=True)\\n\\n    #Remove edges until the graph has more than one connected component \\n    while nx.number_connected_components(graph_copy) ==1:\\n        edge_to_remove = sorted_edges.pop(0)[0]\\n        graph_copy.remove_edge(*edge_to_remove)\\n    \\n    #Find connected components as communities\\n    communities = list(nx.connected_components(graph_copy))\\n\\n    # Check if Paper_1 and Paper_2 belong to the same community\\n    same_community = any({p1,p2} <= community for community in communities)\\n\\n    #Calculate the minimum number of edges removed\\n    num_edges_end = graph_copy.number_of_edges()\\n\\n    diff = num_edges_start-num_edges_end\\n\\n    # Calculate the minimum number of edges removed\\n    return diff, communities, same_community\\n\\nmin, cm, is_cm = functionality_5(sub_citation_graph.copy(), 2152761983, 2088032561)#subsample[0], subsample[1])\\nprint(\"Edges to eliminate:\", min) \\nprint(\"Number of communities:\", len(cm))\\nprint(\"Are the paper in the same community?\", is_cm)\\n'"
-            ]
-          },
-          "execution_count": 4,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "execution_count": 27,
+      "id": "39fd6e78",
+      "metadata": {},
+      "outputs": [],
       "source": [
-        "#sys.path.append(\"funct\")\n",
-        "#from functionality5 import functionality_5\n",
+        "sys.path.append(\"funct\")\n",
+        "from functionality5 import functionality_5\n",
         "\n",
-        "'''\n",
-        "#number of nodes we want to analyze\n",
+        "graph_copy = nx.Graph()\n",
+        "graph_copy.add_nodes_from(citation_graph.nodes())\n",
+        "graph_copy.add_edges_from(citation_graph.edges())\n",
+        "\n",
+        "#Number of nodes we want to analyze\n",
         "n=2\n",
+        "subsample = random.sample(list(citation_graph.nodes), n)\n",
         "\n",
-        "#subsample = random.sample(list(sub_citation_graph.nodes), n)\n",
-        "print(\"Papers we want:\", subsample[0], subsample[1])\n",
+        "#Number of N\n",
+        "N_top=100\n",
         "\n",
-        "\n",
-        "def functionality_5(graph, p1, p2):\n",
-        "    #We need an undirected graph\n",
-        "    graph_copy = graph.to_undirected()\n",
-        "\n",
-        "    if nx.number_connected_components(graph_copy) > 1:\n",
-        "        print(\"The graph is not full connected!\")\n",
-        "        return 0, [], False\n",
-        "    \n",
-        "    #Calculate the initial number of edges\n",
-        "    num_edges_start = graph_copy.number_of_edges()\n",
-        "\n",
-        "    #Calculate betweenness centrality for each edge\n",
-        "    edge_betweenness = nx.edge_betweenness_centrality(graph_copy)\n",
-        "\n",
-        "    # Sort edges by betweenness centrality in descending order\n",
-        "    sorted_edges = sorted(edge_betweenness.items(), key=lambda x: x[1], reverse=True)\n",
-        "\n",
-        "    #Remove edges until the graph has more than one connected component \n",
-        "    while nx.number_connected_components(graph_copy) ==1:\n",
-        "        edge_to_remove = sorted_edges.pop(0)[0]\n",
-        "        graph_copy.remove_edge(*edge_to_remove)\n",
-        "    \n",
-        "    #Find connected components as communities\n",
-        "    communities = list(nx.connected_components(graph_copy))\n",
-        "\n",
-        "    # Check if Paper_1 and Paper_2 belong to the same community\n",
-        "    same_community = any({p1,p2} <= community for community in communities)\n",
-        "\n",
-        "    #Calculate the minimum number of edges removed\n",
-        "    num_edges_end = graph_copy.number_of_edges()\n",
-        "\n",
-        "    diff = num_edges_start-num_edges_end\n",
-        "\n",
-        "    # Calculate the minimum number of edges removed\n",
-        "    return diff, communities, same_community\n",
-        "\n",
-        "min, cm, is_cm = functionality_5(sub_citation_graph.copy(), 2152761983, 2088032561)#subsample[0], subsample[1])\n",
-        "print(\"Edges to eliminate:\", min) \n",
-        "print(\"Number of communities:\", len(cm))\n",
-        "print(\"Are the paper in the same community?\", is_cm)\n",
-        "'''"
+        "number_of_edges, community, isthesame_community = functionality_5(graph_copy, subsample[0], subsample[1], N=N_top)"
       ]
     },
     {
@@ -1492,7 +1442,7 @@
       "id": "46f16f66",
       "metadata": {},
       "source": [
-        "It is possible to find the exercise in the appropriate `CommandLine.sh` file, and the screenshot in the `CLQ_screenshots` folder "
+        "It is possible to find the exercise in the appropriate `CommandLine.sh` file, and the screenshot in the `CLQ_screenshots/` folder "
       ]
     },
     {
